einados-redirection.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-new-domain
spec:
  redirectRegex:
    regex: ^https?://(?!halford\.einados\.com)(.*\.)?einados\.com/(.*)
    replacement: https://agrohacksstuff.io/$2
    permanent: true
