hhc2022-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hhc2022-deployment
  labels:
    app: hhc2022-site
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hhc2022-site
  template:
    metadata:
      labels:
        app: hhc2022-site
    spec:
      containers:
      - name: hhc2022-site
        image: agr0dan/hhc2021:20250314
        imagePullPolicy: Always
        ports:
        - containerPort: 80
