main-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agrohacksstuff-deployment
  labels:
    app: main-site
spec:
  replicas: 3
  selector:
    matchLabels:
      app: main-site
  template:
    metadata:
      labels:
        app: main-site
    spec:
      containers:
      - name: main-site
        image: agr0dan/agrohacksstuff.io:20250314
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: mainsite-web
