uaclookup-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uaclookup-deployment
  labels:
    app: uaclookup-site
spec:
  replicas: 2
  selector:
    matchLabels:
      app: uaclookup-site
  template:
    metadata:
      labels:
        app: uaclookup-site
    spec:
      containers:
      - name: uaclookup-site
        image: agr0dan/uac_lookup:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
