halford-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: halford-service
spec:
  selector:
    app: halford-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
