hhc2020-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hhc2020-service
spec:
  selector:
    app: hhc2020-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
