hhc2021-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hhc2021-service
spec:
  selector:
    app: hhc2021-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
