main-site-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-site-service
spec:
  selector:
    app: main-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
