ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "default-https-redirect@kubernetescrd"
spec:
  tls:
  - hosts:
    - k8s-test.agrohacksstuff.io
    secretName: k8s-test.agrohacksstuff.io
  - hosts:
    - hhc2020-k8s.agrohacksstuff.io
    secretName: hhc2020-k8s.agrohacksstuff.io
  - hosts:
    - hhc2021-k8s.agrohacksstuff.io
    secretName: hhc2021-k8s.agrohacksstuff.io
  - hosts:
    - hhc2022-k8s.agrohacksstuff.io
    secretName: hhc2022-k8s.agrohacksstuff.io
  - hosts:
    - uac.agrohacksstuff.io
    secretName: uac.agrohacksstuff.io
  - hosts:
    - hhc2020.agrohacksstuff.io
    secretName: hhc2020.agrohacksstuff.io
  - hosts:
    - agrohacksstuff.io
    - www.agrohacksstuff.io
    secretName: agrohacksstuff.io
  - hosts:
    - halford.einados.com
    - einados.com
    - www.einados.com
    secretName: halford.einados.com
  rules:
  - host: agrohacksstuff.io
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: main-site-service
              port:
                number: 80
  - host: www.agrohacksstuff.io
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: main-site-service
              port:
                number: 80
  - host: k8s-test.agrohacksstuff.io
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: main-site-service
              port: 
                number: 80
  - host: hhc2020-k8s.agrohacksstuff.io
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: hhc2020-service
              port:
                number: 80
  - host: hhc2020.agrohacksstuff.io
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: hhc2020-service
              port:
                number: 80
  - host: hhc2021-k8s.agrohacksstuff.io
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: hhc2021-service
              port:
                number: 80
  - host: hhc2021.agrohacksstuff.io
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: hhc2021-service
              port:
                number: 80
  - host: hhc2022-k8s.agrohacksstuff.io
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: hhc2022-service
              port:
                number: 80
  - host: hhc2022.agrohacksstuff.io
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: hhc2022-service
              port:
                number: 80
  - host: uac.agrohacksstuff.io
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: uaclookup-service
              port:
                number: 80
  - host: halford.einados.com
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: halford-service
              port:
                number: 80
